name:           beam-postgres-transaction
version:        0.1.0.2
synopsis:       Transaction monad for beam-postgres
license:        MPL-2.0
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Type
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/duairc/beam-postgres-transaction
bug-reports:    https://github.com/duairc/beam-postgres-transaction/issues

extra-source-files:
  LICENSE

library
  hs-source-dirs:
    src

  exposed-modules:
    Database.Beam.Postgres.Transaction

  build-depends:
    base < 5,
    beam-core,
    beam-postgres,
    conduit,
    layers,
    postgresql-simple,
    transformers

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/duairc/beam-postgres-transaction.git
